--- a/src/app/order/components/preview-order.component.css
+++ b/src/app/order/components/preview-order.component.css
@@ -1,4 +1,4 @@
-/*md-list-item.md-no-style {
+md-list-item.md-no-style {
   padding: 0px;
 }
 .qty {
@@ -262,36 +262,19 @@ input[type=number] {
 .datepicker {
   width :130px;
 }
-.edit-order label {
-  top: -45px;
-  float: left;
-  position: absolute;
-  left: 7px;
-}
-
-.edit-order input {
-  color: #000;
-  border: 1px solid #ECECEC;
-  width: 95%;
-  padding: 5px;
-}
-
-.place-order input {
-  border: 1px solid #ECECEC;
-}
-
-.edit-order input:focus {
-  border: 0px;
+.assigned-section h3,
+.customer-details h3{
+  margin: 0px 0px 15px;
+  font-size: 16px;
 }
 
 @media all and (max-width:1380px) and (min-width: 320px) {
   .assigned-section {
     height: 58px;
-    border-bottom: 1px solid #F3F3F3;
+    border-bottom: 2px solid #F3F3F3;
   }
   .status-update label,
   .assigned-select label {
     width: 100%;
   }
 }
-*/
