Partial completion of Inbox View rendering with default CSS mapping: Phase 1

--- a/src/app/inbox/item-views/email-compact-view.html
+++ b/src/app/inbox/item-views/email-compact-view.html
@@ -1,4 +1,4 @@
-<md-list-item class="md-3-line email-compact"  >
+<md-list-item class="md-3-line email-compact" [class.active]="selected == email.id" >
   <div > </div>
   <div class="client-section">
     <span><img src="app/inbox/images/email.png"> </span>
