--- a/src/app/order/components/view-order.component.html
+++ b/src/app/order/components/view-order.component.html
@@ -70,7 +70,7 @@
 
   </div>
 
-  <div class="order-details"  *ngIf="orderState === 'orderPreview'">
+  <div class="order-details"  *ngIf="orderState !== 'editOrder'">
 
     <div class="place-order">
       <div layout-gt-sm="column">
