--- a/src/app/inbox/item-views/audio-compact-view.html
+++ b/src/app/inbox/item-views/audio-compact-view.html
@@ -1,4 +1,4 @@
-<md-list-item class="md-3-line">
+<md-list-item class="md-3-line" [class.active]="selected == audioContent.id" >
   <div [ngClass]="{pending: isPending, inProgress: isInProgress, complete : isComplete}"> </div>
   <div class="client-section">
     <span><img src="app/inbox/images/recording.png"> </span>
