--- a/src/app/inbox/item-views/email-compact-view.html
+++ b/src/app/inbox/item-views/email-compact-view.html
@@ -8,10 +8,10 @@
     <h3 class="list-label">{{ email.subject }}</h3>
     <h4>{{ email.from[0].address }}</h4>
     <p>{{ email.priority }}</p>
-    <p>{{ email.defaultTask.assignedTo }}</p>
+    <p>{{ email.defaultTask.assignedTo.firstName }}</p>
   </div>
   <md-list-item class="md-2-line user-avtar">
-    <img [src]="'app/share/images/avtars/'+email.defaultTask.assignedTo + '.jpg'" class="md-avatar" alt="{{email.defaultTask.assignedTo}}"/>
+    <img [src]="'app/share/images/avtars/'+email.defaultTask.assignedTo.firstName + '.jpg'" class="md-avatar" alt="{{email.defaultTask.assignedTo.firstName}}"/>
     <span flex> {{email.defaultTask.assignedOn | amTimeAgo}}</span>
   </md-list-item>
   <p class="delivery-date ">Delivery by {{email.defaultTask.completeBy|date }}</p>
