Component distribution for view/edit order: phase 1

--- a/src/app/order/components/add-items.component.html
+++ b/src/app/order/components/add-items.component.html
@@ -42,4 +42,5 @@
   </div>
   <div layout-padding *ngIf="displayError == true">{{ errorMessage }}</div>
   <button md-raised-button class="button md-primary" (click)="createOrder()" flex="auto">Create Order</button>
+  <button md-raised-button class="button md-primary" (click)="viewHistory()" flex="auto">View Recent Order History</button>
   </div>
