--- a/src/app/order/components/preview-current-order.component.html
+++ b/src/app/order/components/preview-current-order.component.html
@@ -87,7 +87,7 @@
 
   <div layout-padding *ngIf="displayMessage == true">{{ message }}</div>
   <button md-raised-button class="button md-raised md-primary"
-          (click)="orderState = 'editOrder'">Edit Order</button>
+          (click)="editOrder = true">Edit Order</button>
   <button md-raised-button class="button md-raised md-primary"
           (click)="editOrder()">Save Order</button>
 </div>
