--- a/src/app/order/components/order-header.component.html
+++ b/src/app/order/components/order-header.component.html
@@ -3,7 +3,7 @@
   <div flex>
     <md-list layout="column">
       <md-list-item class="md-3-line col-order-detail">
-        <img src="app/share/images/avtars/{{currentOrder.defaultTask.assignedTo}}.jpg" class="md-avatar" >
+        <img src="app/share/images/avtars/{{currentOrder.defaultTask.assignedTo.firstName}}.jpg" class="md-avatar" >
         <div class="md-list-item-text">
           <h2>Order Details</h2>
         </div>
@@ -26,11 +26,10 @@
   <div flex class="assigned-select" flex="40">
     <label flex="100" layout="column">Assigned to :</label>
     <md-input-container class="md-block" flex-gt-sm flex>
-      <select [(ngModel)]="currentOrder.defaultTask.assignedTo">
+      <select [(ngModel)]="currentOrder.defaultTask.assignedTo.firstName">
         <option>Swapnil</option>
         <option>Waqar</option>
         <option>Chetan</option>
-        <option>Parag</option>
         <option>Sudhakar</option>
       </select>
     </md-input-container>
