--- a/src/app/order/components/preview-order.component.html
+++ b/src/app/order/components/preview-order.component.html
@@ -8,7 +8,7 @@
     </div>
     <div class="md-block" flex="100" layout-padding layout="row">
       <label flex="35">Order assigned to:</label>
-      <h3 flex="65">{{ currentOrder.defaultTask.assignedTo}}</h3>
+      <h3 flex="65">{{ currentOrder.defaultTask.assignedTo.firstName}}</h3>
     </div>
   </div>
 
