--- a/src/app/inbox/item-views/order-compact-view.html
+++ b/src/app/inbox/item-views/order-compact-view.html
@@ -6,14 +6,11 @@
   </div>
   <div class="md-list-item-text" layout="column">
     <p *ngFor="#item of order.items">{{item.name}}, {{item.variant}}, {{item.qty}}</p>
-    <!--<h3 class="list-label">{{ order.orderDetails }}</h3>-->
-    <!--<h4>{{ order.orderDate | date }}</h4>-->
     <p>{{ order.orderType }}</p>
-    <!--<p>{{ order.defaultTask.status }}</p>-->
     <p><b>Assigned to: {{ order.defaultTask.assignedTo.firstName }}</b></p>
   </div>
   <md-list-item class="md-2-line user-avtar">
-    <img [src]="'app/share/images/avtars/'+order.defaultTask.assignedTo + '.jpg'" class="md-avatar" alt="{{order.defaultTask.assignedTo}}"/>
+    <img [src]="'app/share/images/avtars/'+order.defaultTask.assignedTo.firstName + '.jpg'" class="md-avatar" alt="{{order.defaultTask.assignedTo}}"/>
     <span flex> 25min </span>
   </md-list-item>
   <p class="delivery-date">Delivery by {{ order.orderDate | date }}</p>
