--- a/src/app/order/components/add-other-details.component.html
+++ b/src/app/order/components/add-other-details.component.html
@@ -1,6 +1,6 @@
 <div class="orders">
 
-  <div class="order-details">
+  <!--<div class="order-details">
     <div class="tableClass customer-details" layout-padding >
       <h3>Details:</h3>
       <div layout-gt-sm="row">
@@ -140,7 +140,171 @@
         </div>
       </div>
     </div>
+  </div>-->
+
+  <div class="order-details">
+    <h3>Get Customer Details: </h3>
+
+    <div flex class="assigned-select" flex="40">
+      <md-input-container class="md-block" flex-gt-sm flex>
+<!--        <select onchange="getCustomerDetails(customer)">
+          <option selected="selected">Choose Customer</option>
+          <option *ngFor="#customer of allCustomers"
+                  [value]="customer.fromCompany"
+                  onchange="getCustomerDetails(customer)">{{customer.fromCompany}}</option>
+        </select>-->
+
+        <select (change)="getCustomerDetails($event.target.value)">
+          <option selected="selected">Choose Customer</option>
+          <option *ngFor="#customer of allCustomers" [value]="customer._id">{{customer.fromCompany}}</option>
+        </select>
+      </md-input-container>
+    </div>
+
+    <div class="tableClass customer-details" layout-padding *ngIf="showDetails">
+      <h3>Customer Details:</h3>
+      <div layout-gt-sm="row">
+        <div layout-gt-sm="row" flex="50">
+          <md-input-container class="md-block" flex-gt-sm>
+            <label>Compnay Name</label>
+            <input md-input [(ngModel)] = "selectedCustomer.fromCompany" >
+          </md-input-container>
+        </div>
+        <div layout-gt-sm="row" flex="50">
+          <md-input-container class="md-block" flex-gt-sm>
+            <label>Contact Person</label>
+            <input md-input [(ngModel)] = "selectedCustomer.contactPerson" >
+          </md-input-container>
+        </div>
+      </div>
+
+      <div layout-gt-sm="row" >
+        <div layout-gt-sm="row" flex="50">
+          <md-input-container class="md-block" flex-gt-sm>
+            <label>Contact Number</label>
+            <input md-input [(ngModel)] = "selectedCustomer.contactNumber" >
+          </md-input-container>
+        </div>
+      </div>
+
+      <div class="tableClass" layout-padding>
+        <h4>Shipping Address</h4>
+        <div layout-gt-sm="row" >
+          <div layout-gt-sm="row" flex="50">
+            <md-input-container class="md-block" flex-gt-sm>
+              <label>Line1</label>
+              <input md-input [(ngModel)] = "selectedCustomer.shippingAddress[0].line1" >
+            </md-input-container>
+          </div>
+          <div layout-gt-sm="row" flex="50">
+            <md-input-container class="md-block" flex-gt-sm>
+              <label>Line2</label>
+              <input md-input [(ngModel)] = "selectedCustomer.shippingAddress[0].line2" >
+            </md-input-container>
+          </div>
+        </div>
+        <div layout-gt-sm="row" >
+          <div layout-gt-sm="row" flex="50">
+            <md-input-container class="md-block" flex-gt-sm>
+              <label>Pincode</label>
+              <input md-input [(ngModel)] = "selectedCustomer.shippingAddress[0].pinCode" >
+            </md-input-container>
+          </div>
+          <div layout-gt-sm="row" flex="50">
+            <md-input-container class="md-block" flex-gt-sm>
+              <label>City</label>
+              <input md-input [(ngModel)] = "selectedCustomer.shippingAddress[0].city" >
+            </md-input-container>
+          </div>
+        </div>
+        <div layout-gt-sm="row" >
+          <div layout-gt-sm="row" flex="50">
+            <md-input-container class="md-block" flex-gt-sm>
+              <label>State</label>
+              <input md-input [(ngModel)] = "selectedCustomer.shippingAddress[0].state" >
+            </md-input-container>
+          </div>
+          <div layout-gt-sm="row" flex="50">
+            <md-input-container class="md-block" flex-gt-sm>
+              <label>Country</label>
+              <input md-input [(ngModel)] = "selectedCustomer.shippingAddress[0].country" >
+            </md-input-container>
+          </div>
+        </div>
+
+        <h4>Billing Address
+          <label>
+            <input type="checkbox" (click)="copyAddress()"/>
+            Same as Shipping Address
+          </label>
+        </h4>
+
+        <div layout-gt-sm="row" >
+          <div layout-gt-sm="row" flex="50">
+            <md-input-container class="md-block" flex-gt-sm>
+              <label >Line1</label>
+              <input md-input [(ngModel)] = "selectedCustomer.billingAddress[0].line1" >
+            </md-input-container>
+          </div>
+          <div layout-gt-sm="row" flex="50">
+            <md-input-container class="md-block" flex-gt-sm>
+              <label>Line2</label>
+              <input md-input [(ngModel)] = "selectedCustomer.billingAddress[0].line2" >
+            </md-input-container>
+          </div>
+        </div>
+
+        <div layout-gt-sm="row" >
+          <div layout-gt-sm="row" flex="50">
+            <md-input-container class="md-block" flex-gt-sm>
+              <label>Pincode</label>
+              <input md-input [(ngModel)] = "selectedCustomer.billingAddress[0].pinCode" >
+            </md-input-container>
+          </div>
+          <div layout-gt-sm="row" flex="50">
+            <md-input-container class="md-block" flex-gt-sm>
+              <label>City</label>
+              <input md-input [(ngModel)] = "selectedCustomer.billingAddress[0].city" >
+            </md-input-container>
+          </div>
+        </div>
+
+        <div layout-gt-sm="row" >
+          <div layout-gt-sm="row" flex="50">
+            <md-input-container class="md-block" flex-gt-sm>
+              <label>State</label>
+              <input md-input [(ngModel)] = "selectedCustomer.billingAddress[0].state" >
+            </md-input-container>
+          </div>
+          <div layout-gt-sm="row" flex="50">
+            <md-input-container class="md-block" flex-gt-sm>
+              <label>Country</label>
+              <input md-input [(ngModel)] = "selectedCustomer.billingAddress[0].country" >
+            </md-input-container>
+          </div>
+        </div>
+
+        <div layout-gt-sm="row">
+          <h5>Please fill up a few more details in order to complete your order: </h5>
+          <div layout-gt-sm="row" flex="50">
+            <md-input-container class="md-block" flex-gt-sm>
+              <label>Remarks</label>
+              <input md-input [(ngModel)] = "currentOrder.remarks" >
+            </md-input-container>
+          </div>
+          <div layout-gt-sm="row" flex="50">
+            <md-input-container class="md-block" flex-gt-sm>
+              <label>Order Type</label>
+              <input md-input [(ngModel)] = "currentOrder.orderType" >
+            </md-input-container>
+          </div>
+        </div>
+
+      </div>
+    </div>
+
   </div>
+
   <div layout-padding *ngIf="displayError == true">{{ errorMessage }}</div>
   <button md-raised-button class="button md-raised md-primary" (click)="proceedNext()">Proceed Next</button>
   <button md-raised-button class="cancel button md-raised" (click)="cancelOrder()" >Cancel</button>
